Set body overflow to hidden to prevent double scrollbar.

--- a/views/stylesheets/style.styl
+++ b/views/stylesheets/style.styl
@@ -1,6 +1,7 @@
 body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-  background-color: #000;
+  background-color: #000
+  overflow: hidden
 
 .header
   padding: 10px
